--- a/puput/static/puput/css/puput.css
+++ b/puput/static/puput/css/puput.css
@@ -11,6 +11,13 @@
     /* Opera */
 }
 
+/* Make image responsive */
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 body,
 h1,
 h2,
