--- a/puput/templates/puput/base.html
+++ b/puput/templates/puput/base.html
@@ -122,9 +122,7 @@
     <div class="footer_bottom">
         <div class="copy">
             <p>
-                Powered by <a href="http://www.djangoproject.com" rel="nofollow">Django</a>,
-                <a href="http://www.wagtail.io" rel="nofollow">Wagtail</a> and
-                <a href="http://github.com/APSL/puput" rel="nofollow">Puput</a>
+                2019 &copy; XMinerva
             </p>
         </div>
     </div>
